change to baiyueheiyu

--- a/doc/blog/python/2018122701.md
+++ b/doc/blog/python/2018122701.md
@@ -37,7 +37,7 @@ Django和Flask是两个最流行的Python Web框架，如果你想用Python做we
 
 ## 白月黑羽web开发教程
 
-如果你想学习Django，我推荐名为Django for Beginners的书，你也可以参考[白月黑羽](http://www.python3.vip/)的web开发教程，在白月黑羽的教程里，会带着你一步一步的建立一个医药管理系统，每一个学习阶段的源码也可以直接下载，帮忙大家学习。
+如果你想学习Django，我推荐名为Django for Beginners的书，你也可以参考[白月黑羽](http://www.baiyueheiyu.com/)的web开发教程，在白月黑羽的教程里，会带着你一步一步的建立一个医药管理系统，每一个学习阶段的源码也可以直接下载，帮忙大家学习。
 
 如果你刚入职，领导交给你的开发任务后，感觉心里没底，没信心，那怎么办呢？除了自己学习，还可以找到我们，白月黑羽的朋友圈，都是十年以上的老司机工程师，我们会提供有偿支持，帮助您解决刚刚入职的困难，平安度过试用期，为了建立一个好的印象！
 
