--- a/doc/blog/python/2019011501.md
+++ b/doc/blog/python/2019011501.md
@@ -13,7 +13,7 @@ toc: false
 
 对了，先要确定  ```要不要转行``` ？ 
 
-白月黑羽 建议您 先看我的这篇 文章 <a target='_blank' href='http://www.python3.vip/doc/blog/python/2019010801/'> 我30岁了，转行学编程可以吗？</a> ，这篇文章会教您根据自身的情况决定是否应该转行 程序员。
+白月黑羽 建议您 先看我的这篇 文章 <a target='_blank' href='http://www.baiyueheiyu.com/doc/blog/python/2019010801/'> 我30岁了，转行学编程可以吗？</a> ，这篇文章会教您根据自身的情况决定是否应该转行 程序员。
 
 好的，这里我们重点讲 如何转行，也就是如何学习 锻炼，才能尽快的成为合格的甚至优秀的程序员，拿到传说中的高薪。
 
@@ -58,7 +58,7 @@ toc: false
 我们的网站都是免费的， 无需注册，无需付费。而且，我们提供和读者交流的平台， 会根据大家的意见，不断的改进。
 
 
-好的，不扯了。我们的网址是  ```www.python3.vip```  ，您也可以百度搜索 ```白月黑羽```。
+好的，不扯了。我们的网址是  ```www.baiyueheiyu.com```  ，您也可以百度搜索 ```白月黑羽```。
 
 反正是免费的，您可以花半个小时 ，浏览一下，自己感受一下。
 
