--- a/doc/faq/questionbank/software/0001.md
+++ b/doc/faq/questionbank/software/0001.md
@@ -3,7 +3,7 @@ title: 软件行业是一个什么样的行业
 toc: true
 ---
 
-软件行业或者说IT行业，在外行人的眼中，一直是高富帅的聚集地，特别是在BAT工作的工程师，可以说是高富帅中的男神了，每个月拿着很高薪水，坐在宽松的办环境，上班喝着咖啡，敲着键盘。听着就感觉挺高大上的？所以很多人非常羡慕，也想加入？人有梦想是好的，万一实现了呢？算一算[白月黑羽](http://www.python3.vip/)在这个行业也摸爬滚打10多年，有很多的感触和体会，想和大家分享一下自己的一些体会，希望能对新入行的同学，或者想转行从事软件相关工作的同学有些帮助，选对适合自己且有发展前景的方向。今天就先和大家先聊聊想软件这个行业
+软件行业或者说IT行业，在外行人的眼中，一直是高富帅的聚集地，特别是在BAT工作的工程师，可以说是高富帅中的男神了，每个月拿着很高薪水，坐在宽松的办环境，上班喝着咖啡，敲着键盘。听着就感觉挺高大上的？所以很多人非常羡慕，也想加入？人有梦想是好的，万一实现了呢？算一算[白月黑羽](http://www.baiyueheiyu.com/)在这个行业也摸爬滚打10多年，有很多的感触和体会，想和大家分享一下自己的一些体会，希望能对新入行的同学，或者想转行从事软件相关工作的同学有些帮助，选对适合自己且有发展前景的方向。今天就先和大家先聊聊想软件这个行业
 
 ## 软件行业方向
 
@@ -44,4 +44,4 @@ toc: true
 
 ## 下次分享
 
-那我们通常说的软件开发，指的仅仅是实际产品的研发与实施，后面[白月黑羽](http://www.python3.vip/)将和大家分享一下软件开发的方向以及每一个方向大概开发什么样的产品。
+那我们通常说的软件开发，指的仅仅是实际产品的研发与实施，后面[白月黑羽](http://www.baiyueheiyu.com/)将和大家分享一下软件开发的方向以及每一个方向大概开发什么样的产品。
