--- a/doc/prac/python/3003.md
+++ b/doc/prac/python/3003.md
@@ -31,11 +31,11 @@ title: Python练习：自动群发邮件
 
 ```python
 # 邮件标题
-subject = '学习Python，就上 python3.vip'
+subject = '学习Python，就上 baiyueheiyu.com'
 
 # 邮件内容
 body = '''
-浏览器输入  python3.vip 即可
+浏览器输入  baiyueheiyu.com 即可
 
 有基础教程、自动化、爬虫、web开发
 
