--- a/doc/tutorial/python/0009.md
+++ b/doc/tutorial/python/0009.md
@@ -306,16 +306,16 @@ print(a)
 比如
 
 ```py
-a = [1, 2, 3.14, 'python3.vip']  
+a = [1, 2, 3.14, 'baiyueheiyu.com']  
 
 # 插入到索引0的位置，也是插到第1个元素的位置上
-# a列表内容就变成了 ['你好', 1, 2, 3.14, 'python3.vip']
+# a列表内容就变成了 ['你好', 1, 2, 3.14, 'baiyueheiyu.com']
 a.insert(0, '你好')
 print(a)
 
 
 # 插入到索引2的位置，也是插到第3个元素的位置上
-# a列表内容就变成了 ['你好', 1, '黑羽',  2, 3.14, 'python3.vip']
+# a列表内容就变成了 ['你好', 1, '黑羽',  2, 3.14, 'baiyueheiyu.com']
 a.insert(2, '黑羽')
 print(a)
 ```
@@ -330,7 +330,7 @@ print(a)
 
 比如
 ```py
-a = [1, 2, 3.14, 'python3.vip']  
+a = [1, 2, 3.14, 'baiyueheiyu.com']  
 
 # 取出索引为3 的元素，也就是第4个元素
 poped = a.pop(3)
@@ -339,7 +339,7 @@ poped = a.pop(3)
 print(a)
 
 
-# 而取出的元素赋值给变量poped， poped的内容就是 'python3.vip'  
+# 而取出的元素赋值给变量poped， poped的内容就是 'baiyueheiyu.com'  
 print(poped)
 ```
 
