--- a/doc/tutorial/selenium/03.md
+++ b/doc/tutorial/selenium/03.md
@@ -22,7 +22,7 @@ from selenium import webdriver
 
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample2.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample2.html')
 
 # 根据 class name 选择元素，返回的是 一个列表
 elements = driver.find_elements_by_class_name('plant')
@@ -95,7 +95,7 @@ from selenium import webdriver
 
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample2.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample2.html')
 
 
 # 先根据name属性值 'innerFrame'，切换到iframe中
@@ -134,7 +134,7 @@ from selenium import webdriver
 
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample2.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample2.html')
 
 
 # 先根据name属性值 'innerFrame'，切换到iframe中
@@ -181,7 +181,7 @@ from selenium import webdriver
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 driver.implicitly_wait(10)
 
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample3.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample3.html')
 
 # 点击打开新窗口的链接
 link = driver.find_element_by_tag_name("a")
