--- a/doc/tutorial/selenium/02.md
+++ b/doc/tutorial/selenium/02.md
@@ -177,7 +177,7 @@ from selenium import webdriver
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 
 # WebDriver 实例对象的get方法 可以让浏览器打开指定网址
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample1.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample1.html')
 
 # 根据 class name 选择元素，返回的是 一个列表
 # 里面 都是class 属性值为 animal的元素对应的 WebElement对象
@@ -218,7 +218,7 @@ from selenium import webdriver
 driver = webdriver.Chrome(r'd:\webdrivers\chromedriver.exe')
 
 # WebDriver 实例对象的get方法 可以让浏览器打开指定网址
-driver.get('http://www.python3.vip/doc/tutorial/selenium/code/sample1.html')
+driver.get('http://www.baiyueheiyu.com/doc/tutorial/selenium/code/sample1.html')
 
 # 根据 tag name 选择元素，返回的是 一个列表
 # 里面 都是 tag 名为 div 的元素对应的 WebElement对象
