--- a/doc/blog/python/2018071101.md
+++ b/doc/blog/python/2018071101.md
@@ -5,15 +5,16 @@ toc: false
 
 <br>
 
- ```Python 3.7```  已经发布了, 又有新版本玩喽！！
+ ```Python 3.7```  已经发布了, 又有新版本用喽！！
 
 目前还在用 Python3.6 和 Python2.7 的朋友，是不是该立即转到 Python 3.7 呢？
 
-**说明**：对于现在才开始学习的同学是选择学习Python2 还是学习Python3，请参考白月黑羽的另外一篇文章[是选择学习 Python2 还是 Python 3？](/doc/blog/python/2019011401/)了解
 
 <br>
 
-首先大家要知道 Python 3.7 是对 Python 3.6 的升级，Python3.6和Python3.7 是Python3的两个不同的版本。
+首先大家要知道， Python 3.7 是对 Python 3.6 的升级。
+
+Python3.6 和 Python3.7 都是 Python3 这个大版本下面的两个小版本。
 
 [点击这里打开](https://docs.python.org/3/whatsnew/3.7.html) Python官方对 3.7 的新特性描述。
 
@@ -82,6 +83,15 @@ pip install psycopg2-binary
 因为，毕竟Python2 在2020年官方就不再维护，到时候出现什么安全漏洞之类的问题，就比较麻烦了。 而且有些非常实用的新特性 和 库 不会支持 Python2 。
 
 如果决定把项目从Python2 升级到 Python3， 目前可以先升级到Python3.6 ， 因为业界目前对 3.6 的支持还是比较普遍的。 等以后 3.7 支持比较普遍后，再做升级不迟。 
+
+
+-----
+
+0基础的同学 应该选择 选择Python2 还是 Python3？
+
+那还用说，当然是Python3啦！ 
+
+具体原因请参考[是选择学习 Python2 还是 Python 3？](/doc/blog/python/2019011401/)
 
 
 [点击这里学习Python3教程，有视频有图文](/doc/tutorial/python/0001/){: .btn .btn--info .btn--large}
