--- a/doc/prac/python/2003.md
+++ b/doc/prac/python/2003.md
@@ -54,9 +54,10 @@ toc: true
 
 ![image](https://user-images.githubusercontent.com/36462795/52517853-c093f680-2c7c-11e9-96a3-e8414f127991.png)
 
-具体的开发需求，请看这个视频
+具体的开发需求，请[点击查看看这个视频](https://www.bilibili.com/video/av44776968){:target="_blank"}
 
-<video src="http://cc08.cc/video/py/yijianfazhao.mp4"  style="width: 90%;" controls controlsList="nodownload" oncontextmenu="return false;" preload="metadata"></video>
+
+
 
 <br>
 
