--- a/doc/tutorial/python/level2/1001.md
+++ b/doc/tutorial/python/level2/1001.md
@@ -2,8 +2,9 @@
 title: Python程序中调用其他程序
 ---
 
+Python经常被用来开发自动化程序。
 
-Python 开发的程序往往需要调用其它的程序。
+自动化程序往往需要调用其它的程序。
 
 比如，我们要开发一个自动安装系统的程序，其中**有一个步骤** 需要从网络下载一个文件。
 
@@ -64,8 +65,8 @@ Windows上的wget可以 <a target="_blank" href="https://eternallybored.org/misc
 ```py
 import os
 
-version = input('请输入安装包版本')
-cmd = f'wget http://servername/release_{vesrion}.zip'
+version = input('请输入安装包版本:')
+cmd = fr'd:\tools\wget http://mirrors.sohu.com/nginx/nginx-{version}.zip'
 os.system(cmd)
 
 print('下载完毕')
@@ -83,12 +84,18 @@ print('下载完毕')
 os.system 函数没法获取 被调用程序输出到终端窗口的内容。 如果需要对被调用程序的输出信息进行处理的话， 可以使用 **subprocess** 模块
 
 
+### 视频讲解
+
+---
+```白月黑羽教Python学习视频``` - 调用外部程序1
+
+<video src="http://v2.python666.vip/video/py/mp1001_1.mp4"  style="width: 90%;" controls controlsList="nodownload" oncontextmenu="return false;" preload="metadata"></video>
 
 <br>
 
 ## subprocess 模块
 
-subprocess 模块提供了 更为多调用外部程序的功能选择。
+subprocess 模块提供了 更多的 调用外部程序的功能。
 
 <br>
 首先，我们可以获取外部程序输出到屏幕的内容。 这在自动化的时候，非常有用。 可以用来判断外部程序执行结果是否成功， 或者获取我们要分析的数据。
@@ -105,7 +112,7 @@ proc = Popen(
     'fsutil volume diskfree c:',
     stdin  = None,
     stdout = PIPE,
-    stderr = None,
+    stderr = PIPE,
     shell=True)
 
 # communicate 方法返回 输出到 标准输出 和 标准错误 的字节串内容
@@ -114,8 +121,10 @@ outinfo, errinfo = proc.communicate()
 
 # 注意返回的内容是bytes 不是 str ，我的是中文windows，所以用gbk解码
 outinfo = outinfo.decode('gbk')
-print (outinfo) 
-
+errinfo = errinfo.decode('gbk')
+print (outinfo)
+print ('-------------')
+print (errinfo)
 
 outputList = outinfo.splitlines()
 
@@ -163,6 +172,12 @@ print ('让它下载，我们接下来做其他事情。。。。')
 
 ```
 
+### 视频讲解
+
+---
+```白月黑羽教Python学习视频``` - 调用外部程序2
+
+<video src="http://v2.python666.vip/video/py/mp1001_2.mp4"  style="width: 90%;" controls controlsList="nodownload" oncontextmenu="return false;" preload="metadata"></video>
 
 {% include sharepost.html %}
 
