--- a/doc/tutorial/python/level2/1003.md
+++ b/doc/tutorial/python/level2/1003.md
@@ -144,6 +144,16 @@ getXXXTime = sayLocal(getXXXTime)
 
 这样写起来比较方便快捷。
 
+
+### 视频讲解
+
+---
+```白月黑羽教Python学习视频``` - 装饰器
+
+<video src="http://v2.python666.vip/video/py/mp1003_1.mp4"  style="width: 90%;" controls controlsList="nodownload" oncontextmenu="return false;" preload="metadata"></video>
+
+
+
 <br>
 可能有的读者会问，干嘛要这么麻烦？ 我们直接改这个函数的内容，不是更简单吗？像这样
 
