--- a/doc/tutorial/python/level2/2001.md
+++ b/doc/tutorial/python/level2/2001.md
@@ -152,6 +152,51 @@ print(jsonstr)
 
 这样就完成了数据对象的发送。
 
+<br>
+
+可能有的朋友发现了中文部分的数据
+
+```
+奥妙洗衣液
+```
+
+经过json转化后变成了
+
+```
+\u5965\u5999\u6d17\u8863\u6db2
+```
+
+这是因为，json.dumps 方法发现将字符串中如果有非ascii码字符，比如中文，
+缺省就用该字符的unicode数字来表示。
+
+比如  ```奥``` 的unicode是 5965， 就表示为  ```\u5965``` 
+
+如果你不想这样，可以给参数 ensure_ascii 赋值为 False，如下所示
+
+```py
+json.dumps(historyTransactions,ensure_ascii=False,indent=4)
+```
+
+其中，indent参数表示转换后缩进为4，这样显得整洁好看，
+
+这样，转换后，运行结果如下
+
+```json
+[
+    {
+        "time": "20170101070311",
+        "amount": "3088",
+        "productid": "45454455555",
+        "productname": "iphone7"
+    },
+    {
+        "time": "20170101050311",
+        "amount": "18",
+        "productid": "453455772955",
+        "productname": "奥妙洗衣液"
+    }
+]
+```
 
 <br>
 接收方如果也是Python开发的，可以使用 json库中的 loads方法，把json格式的字符串变为  Python中的数据对象
@@ -181,5 +226,11 @@ print(type(translist))
 这样接收方程序就可以方便的处理里面的数据了。
 
 
+### 视频讲解
+
+---
+```白月黑羽教Python学习视频``` - json序列化
+
+<video src="http://v2.python666.vip/video/py/mp2001.mp4"  style="width: 90%;" controls controlsList="nodownload" oncontextmenu="return false;" preload="metadata"></video>
 
 {% include sharepost.html %}
