--- a/doc/tutorial/selenium/01.md
+++ b/doc/tutorial/selenium/01.md
@@ -5,11 +5,11 @@ title: 原理与安装
 
 ## 原理
 
-什么是web应用自动化？
+<!-- 什么是web应用自动化？
 
 通俗点说，就是用程序自动控制浏览器里进行网站操作。
 
-目前做web应用自动化，使用的技术主要 就是 Selenium 。
+目前做web应用自动化，使用的技术主要 就是 Selenium 。 -->
 
 Selenium 是一个 Web 应用的自动化框架。 
 
